update kplex.conf 20200604

--- a/RaspberryPi/RPi_NmeaKplex/kplex.conf
+++ b/RaspberryPi/RPi_NmeaKplex/kplex.conf
@@ -18,32 +18,81 @@
 # strictly required. Similarly "port=10110" is default so not strictly required.
 # See documentation for details on configuration
 # Example configuration starts below this line
-#
+
+####################################################
+##  GLOBAL
 [global]
 strict=no
 checksum=no
 
+##  https://groups.google.com/forum/#!searchin/kplex/replay183%7Csort:date/kplex/DFnMJjmwPE4/I4F3yPmCBQAJ
+
+##  https://groups.google.com/forum/#!searchin/kplex/[file]$20direction$3Din|sort:date/kplex/7AZtOUZ991A/Q-q-RNmOBQAJ
+#Create your named pipe, e.g. mkfifo /home/pi/mypipe
+#...and in kplex config...
+
+[file]
+filename=/home/pi/mypipe
+persist=yes
+direction=in
+
+#Then start kplex
+#Then run: replay183  /home/pi/namefile.nmea > /home/pi/mypipe
+
+[file]
+name=LOG
+filename=/home/pi/kplex-timestamp.nmea4
+direction=out
+owner=pi
+perm=666
+group=pi
+append=yes
+timestamp=ms
+
 [serial]
-name=nke
+name=NKE
+optional=yes
 filename=/dev/ttyUSB0
 direction=both
 baud=115200
+checksum=no
+ifilter=-IIZDA:-IIVTG:-IIGLL:-IIRMC:+all
+# Peut-etre supprimer les trames de positionnement ?
+# 42.099 $IIZDA,225206,18,01,2020,,*56
+# 42.300 $IIVTG,0,T,,M,0.0,N,0.0,K,A*04
+# 42.317 $IIGLL,3321.4800,N,07916.9200,W,225206,A,A*4E
+# 42.320 $IIRMC,225206,A,3321.4800,N,07916.9200,W,0.0,0,180120,8.5,W,A*19
+# ?
+# 42.295 $IIRMB,A,0.00,R,,,,,,,999.9,76,0.00,A,A*61#ifilter=
+
+[serial]
+name=GPS
+filename=/dev/ttyUSB1
+direction=in
+baud=4800
+checksum=no
+#ifilter=
+# De memoire, ce GPS Garmin est trop bavard :-)
+# $GPWPL,4730.3500,N,00231.7540,W,ATT VILAIN*2D
+# $GPRMC,085920,A,4720.6718,N,00308.8175,W,0.0,288.7,250718,3.2,W,A*19
+# $GPGGA,085920,4720.6718,N,00308.8175,W,1,11,1.0,-1.0,M,49.5,M,,*7A
+# $GPGSA,A,3,02,05,14,16,21,23,25,26,29,31,37,,1.5,1.0,1.1*3E
+# $GPGSV,3,3,11,29,67,053,00,31,67,234,00,37,65,090,00*4D
+# $GPGLL,4720.6718,N,00308.8175,W,085920,A,A*5A
+# $GPBOD,250.1,T,253.3,M,ATT-PALAIS,ATT VILAIN*58
+# $GPVTG,288.7,T,291.9,M,0.0,N,0.0,K*48
+
+[serial]
+name=AIS
+filename=/dev/ttyUSB2
+direction=in
+baud=38400
+checksum=no
+optional=yes
+#ifilter=-GP*
 
 [tcp]
-name=partout
+name=PARTOUT
 mode=server
 port=10110
 direction=both
-
-[file]
-name=log
-direction=out
-filename=/tmp/kplex.nmea
-owner=pi
-group=pi
-perm=666
-#timestamp=s
-
-#[file]
-#direction=in
-#filename=/home/pi/bateau/TaC/Traces/Sortie_20170922-02.nmea
